--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "validate.js": "^0.13.1"
   }
 }
